# alien_invasion

./: .gitignore  .pre-commit-config.yaml  README.md  alien.py  alien_invasion.py  bullet.py  button.py  game_stats.py  main.py  pyproject.toml  scoreboard.py  settings.py  ship.py
.github/workflows/: ci.yml  pylint.yml
alien_invasion/: alien.py  bullet.py  button.py  fonts.py  game_stats.py  i18n.py  logging_config.py  main.py  paths.py  scoreboard.py  settings.py  ship.py
tests/: conftest.py  test_difficulty.py  test_game.py  test_game_stats.py  test_i18n.py  test_main_logic.py  test_settings.py
