[project]
name = "alien-invasion"
version = "0.1.0"
description = "《外星人入侵》—— Python Crash Course 项目"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "platformdirs>=4.10.0",
    "pygame-ce~=2.5",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=8",
    "ruff>=0.15.15",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: bugbear, SIM: flake8-simplify
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
files = ["alien_invasion"]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
